--- a/CaraLens/CaraLens.csproj
+++ b/CaraLens/CaraLens.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{381CD29E-7875-468C-AD25-2C01CE54632B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>CaraLens</RootNamespace>
+    <AssemblyName>CaraLens</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
